crates/atlas-runtime/tests/snapshots/frontend_syntax__simple_assignment.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Assign:
        target:
          Name:
            name: x
            span:
              start: 0
              end: 1
        value:
          Literal:
            - Number: 42
            - start: 4
              end: 6
        span:
          start: 0
          end: 7
