crates/atlas-runtime/tests/snapshots/frontend_syntax__simple_method_call.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: obj
                span:
                  start: 0
                  end: 3
            member:
              name: method
              span:
                start: 4
                end: 10
            args: []
            span:
              start: 0
              end: 12
        span:
          start: 0
          end: 13
