crates/atlas-runtime/tests/snapshots/frontend_syntax__string_literal.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - String: hello
            - start: 0
              end: 7
        span:
          start: 0
          end: 8
