crates/atlas-runtime/tests/snapshots/frontend_syntax__var_declaration_with_type.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      VarDecl:
        mutable: false
        name:
          name: x
          span:
            start: 4
            end: 5
        type_ref:
          Named:
            - number
            - start: 7
              end: 13
        init:
          Literal:
            - Number: 42
            - start: 16
              end: 18
        span:
          start: 0
          end: 19
