crates/atlas-runtime/tests/snapshots/frontend_syntax__while_loop.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      While:
        cond:
          Literal:
            - Bool: true
            - start: 7
              end: 11
        body:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: x
                    span:
                      start: 15
                      end: 16
                span:
                  start: 15
                  end: 17
          span:
            start: 13
            end: 19
        span:
          start: 0
          end: 19
